# door-controller

./: .gitignore  .gitmodules  README.md  check.sh  code.py  conftest.py  main.py  pyproject.toml  requirements-cpy.txt  requirements.txt  safemode.py  upload.sh
app/: __init__.py  classes.py  common.py  const.py  core.py  hardware.py  logging.py  menu.py  scheduler.py  settings.py  types.py  utils.py
app/tests/: test_get_time_tuples.py
docs/: README.md
firmware/: .gitignore  check.sh  pyproject.toml  requirements.txt  upload.sh
firmware/app/: core.py  menu.py  shared.py
hardware/: .gitignore
hardware/buttons/: buttons.kicad_pcb  buttons.kicad_prl  buttons.kicad_pro  buttons.kicad_sch
hardware/main/: main.kicad_pcb  main.kicad_pro  main.kicad_sch  main.kicad_sym
hardware/main/main.pretty/: DS3231.kicad_mod  HD44780.kicad_mod  Raspberry_Pi_Pico.kicad_mod
tests/: test_settings.py
