[tool.poetry]
name = "pico-controller"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
circuitpython-stubs = "8.2.8"
isort = "^5.12.0"
pylint = "^3.0.2"

[tool.isort]
extra_standard_library = ["board", "digitalio", "keypad", "pwmio"]
profile = "black"

[tool.pylint]
disable = ["import-error", "missing-class-docstring", "missing-function-docstring", "missing-module-docstring", "no-else-return", "too-few-public-methods", "wrong-import-order"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
