[tool.poetry]
name = "pico-controller"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
circuitpython-stubs = "8.2.9"
circup = "^1.5.2"
isort = "^5.13.0"
pylint = "^3.0.2"
pytest = "^7.4.3"

[tool.isort]
extra_standard_library = [
    "board", "busio", "digitalio", "keypad", "microcontroller", "pwmio", "rtc",
    "watchdog"
]
profile = "black"

[tool.pylint]
disable = [
    "import-error", "missing-class-docstring", "missing-function-docstring",
    "missing-module-docstring", "too-few-public-methods", "wrong-import-order"
]
max-locals = 20

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
