[tool.poetry]
name = "pico-controller"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
circuitpython-stubs = "9.0.3"
isort = "^5.13.2"
pylint = "^3.1.0"
pytest = "^8.1.1"

[tool.isort]
extra_standard_library = [
    "board", "busio", "digitalio", "keypad", "microcontroller", "pwmio", "rtc",
    "watchdog"
]
profile = "black"

[tool.pylint]
disable = [
    "import-error", "missing-class-docstring", "missing-function-docstring",
    "missing-module-docstring", "too-few-public-methods",
    "unnecessary-lambda-assignment", "wrong-import-order"
]
max-locals = 20

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
