[tool.poetry]
name = "pico-controller"
version = "1.0.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pylint = "^3.2.7"
pytest = "^8.3.2"

[tool.isort]
extra_standard_library = [
    "board", "busio", "digitalio", "keypad", "microcontroller", "pwmio", "rtc",
    "watchdog"
]
profile = "black"

[tool.pylint]
disable = [
    "import-error", "missing-class-docstring", "missing-function-docstring",
    "missing-module-docstring", "too-few-public-methods",
    "unnecessary-lambda-assignment", "wrong-import-order"
]
max-locals = 20

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
